--- a/private_dot_config/aliasrc.tmpl
+++ b/private_dot_config/aliasrc.tmpl
@@ -7,8 +7,8 @@ alias \
 {{ end }}
 {{ if (eq .chezmoi.os "linux") }}
 alias \
-		ls="gls -hN --color=auto --group-directories-first" \
-		la="gls -a -hN --color=auto --group-directories-first" \
+		ls="ls -hN --color=auto --group-directories-first" \
+		la="ls -a -hN --color=auto --group-directories-first" \
 		grep="grep --color=auto" 
 {{ end }}
 alias \
