--- a/private_dot_config/aliasrc.tmpl
+++ b/private_dot_config/aliasrc.tmpl
@@ -47,7 +47,8 @@ alias \
 		ff="fzf" \
 		ss_full="flameshot full -p ~/pictures/screenshot/" \
 		v="nvim" \
-		vf="fzf | xargs -r nvim" \
+		fv="fzf | xargs -r nvim" \
+		fmpv="fzf | xargs -r mpv" \
 		vim="nvim" \
 		vimdiff="nvim -d" \
 		vi="nvim" \
@@ -104,10 +105,11 @@ alias \
 alias \
 		chez="chezmoi" \
 		chezed="chezmoi edit" \
+		cv="chezmoi edit" \
 		chezap="chezmoi -v apply" \
 		chezcd="chezmoi cd" \
 		chezad="chezmoi add" \
-		chezup="chezmoi update"
+		chezup="chezmoi -v update"
 #GIT
 alias \
 		g="git" \
@@ -117,6 +119,8 @@ alias \
 		gbr="git branch" \
 		gch="git checkout" \
 		gcl="git clone" \
+		gclm="cd $HOME/repos/mario/; git clone" \
+		gclo="cd $HOME/repos/others/; git clone" \
 		gclb="git clone --bare" \
 		gad="git add" \
 		gpu="git push" \
@@ -127,60 +131,14 @@ alias \
 		ginb="git init --bare"
 
 #GIT BARE
-alias \
-		rdf="/usr/bin/git --git-dir=$HOME/repos/mario/bare/dotfiles/ --work-tree=$HOME" \
-		rsm="/usr/bin/git --git-dir=$XDG_BARE_HOME/suckless-mario --work-tree=$HOME" \
-		rdd="/usr/bin/git --git-dir=$XDG_BARE_HOME/dumpdot --work-tree=$HOME" \
-		rdt="/usr/bin/git --git-dir=$HOME/repos/test --work-tree=$HOME" \
-		rdfut="rdf config --local status.showUntrackedFiles no" \
-		rsmut="rsm config --local status.showUntrackedFiles no" 
+#alias \
+#		rdf="/usr/bin/git --git-dir=$HOME/repos/mario/bare/dotfiles/ --work-tree=$HOME" \
+#		rsm="/usr/bin/git --git-dir=$XDG_BARE_HOME/suckless-mario --work-tree=$HOME" \
+#		rdd="/usr/bin/git --git-dir=$XDG_BARE_HOME/dumpdot --work-tree=$HOME" \
+#		rdt="/usr/bin/git --git-dir=$HOME/repos/test --work-tree=$HOME" \
+#		rdfut="rdf config --local status.showUntrackedFiles no" \
+#		rsmut="rsm config --local status.showUntrackedFiles no" 
 
 alias \
 		fc="make clean && rm -rf config.h && git reset --hard origin/master" \
 		fm="make && sudo make clean install"
-
-#FILES
-alias \
-		cdcf="cd $XDG_CONFIG_HOME" \
-		lcfu="lf $HOME/documents/UNKRIS-DOC/" \
-		lcfc="lf $HOME/code/"\
-		cdcfc="cd $HOME/code"\
-		vcfc="v $HOME/code"\
-		cdcfn="cd $HOME/Dropbox/org"\
-		lcfn="lf $HOME/Dropbox/org"\
-		vcfa="$EDITOR $XDG_CONFIG_HOME/aliasrc" \
-		vcfvs="$EDITOR $XDG_CONFIG_HOME/VSCodium/user-data/User/" \
-		vcft="$EDITOR $XDG_CONFIG_HOME/tmux/tmux.conf" \
-		vcfe="$EDITOR $XDG_CONFIG_HOME/doom/config.el" \
-		vcfdw="$EDITOR $HOME/suckless/dwm" \
-		vcfdm="$EDITOR $HOME/suckless/dmenu" \
-		vcfx="$EDITOR $XDG_CONFIG_HOME/xmonad/xmonad.hs" \
-		vcfst="$EDITOR $HOME/suckless/st" \
-		vcfv="$EDITOR $XDG_CONFIG_HOME/nvim/" \
-		cdcfv="cd $XDG_CONFIG_HOME/nvim/" \
-		vcfb="$EDITOR $XDG_CONFIG_HOME/bash/.bashrc" \
-		vcfz="$EDITOR $XDG_CONFIG_HOME/zsh/.zshrc" 
-
-
-{{ if (eq .chezmoi.os "darwin") }}
-#files (Mac)
-alias \
-		cdcf="cd $HOME/.config" \
-		cfu="cd $HOME/Documents/UNKRIS-DOC/" \
-		cdcfc="cd $HOME/code"\
-		vcfc="v $HOME/code"\
-		cdcfn="cd $HOME/Dropbox/org"\
-		vcfn="v $HOME/Dropbox/org"\
-		vcfa="v $HOME/.config/aliasrc" \
-		vcfvs="v $HOME/.config/VSCodium/user-data/User/" \
-		vcft="v $HOME/.config/tmux/tmux.conf" \
-		vcfe="v $HOME/.config/doom/config.el" \
-		vcfdw="v $HOME/suckless/dwm" \
-		vcfdm="v $HOME/suckless/dmenu" \
-		vcfx="v $HOME/.config/xmonad/xmonad.hs" \
-		vcfst="v $HOME/suckless/st" \
-		vcfv="v $HOME/.config/nvim/" \
-		cdcfv="cd $HOME/.config/nvim/" \
-		vcfb="v $HOME/.config/bash/.bashrc" \
-		vcfz="v $HOME/.config/zsh/.zshrc" 
-{{ end }}
