--- a/private_dot_config/git/config.tmpl
+++ b/private_dot_config/git/config.tmpl
@@ -5,3 +5,19 @@
 	editor = nvim
 [github]
 	user = romariorobby
+[alias]
+	g = git
+	b = branch -v
+	bd = branch -d
+	bD = branch -D
+	co = checkout
+	com = checkout -m
+	cone = checkout --no-edit
+	coa = checkout --amend
+	coane = checkout --amend --no-edit
+	ci = commit
+	m = merge
+	s = status
+	rh = reset --hard
+	lgr = log --graph --date=relative
+	lo = log --oneline
