update stuff and add sxhkd,bspwm

--- a/private_dot_config/aliasrc.tmpl
+++ b/private_dot_config/aliasrc.tmpl
@@ -52,6 +52,7 @@ alias \
 		vim="nvim" \
 		vimdiff="nvim -d" \
 		vi="nvim" \
+		abook="abook --config "XDG_CONFIG_HOME"/abook/abookrc --datafile "$XDG_DATA_HOME"/abook/addressbook" \
 		suv="sudo nvim" \
 		z="zathura" \
 		tabz='tabbed -c zathura -e' \
