add more scripts (luke) and update some files

--- a/private_dot_config/aliasrc.tmpl
+++ b/private_dot_config/aliasrc.tmpl
@@ -116,7 +116,7 @@ alias \
 		g="git" \
 		gs="git status" \
 		gst="git status" \
-		glr="git log --oneline" \
+		glr="git log --graph --date=relative" \
 		glo="git log --oneline" \
 		grv="git revert" \
 		gbr="git branch" \
