update lates lukes

--- a/private_dot_config/shell/aliasrc.tmpl
+++ b/private_dot_config/shell/aliasrc.tmpl
@@ -54,8 +54,8 @@ alias \
 		fv="fzf | xargs -r nvim" \
 		fmpv="fzf | xargs -r mpv" \
 		vim="nvim" \
+		vimm="vim"\
 		vimdiff="nvim -d" \
-		vi="nvim" \
 		abook="abook --config "XDG_CONFIG_HOME"/abook/abookrc --datafile "$XDG_DATA_HOME"/abook/addressbook" \
 		suv="sudo nvim" \
 		z="zathura" \
