--- a/private_dot_config/shell/aliasrc.tmpl
+++ b/private_dot_config/shell/aliasrc.tmpl
@@ -19,6 +19,9 @@ alias \
 		xevg="xev | grep -A6 KeyPress"\
 {{ end }}
 alias \
+		acp="advcp -g" \
+		amv="advmv -g" \
+		cp="cp -iv" \
 		cp="cp -iv" \
 		mv="mv -iv" \
 		mkd="mkdir -pv" \
@@ -32,6 +35,7 @@ alias \
 		sup="sudo pacman" \
 		pgbl="sudo pacman -Sgg | grep blackarch | cut -d ' ' -f2 | sort -u" \
 		pbl="sudo pacman -Sg | grep blackarch" \
+		pqq="pacman -Qq" \
 		pqq="pacman -Qq" \
 		pqqc="pacman -Qq | wc -l" \
 		ps="sup -S" \
