--- a/private_dot_config/shell/aliasrc.tmpl
+++ b/private_dot_config/shell/aliasrc.tmpl
@@ -58,6 +58,7 @@ alias \
 		v="nvim" \
 		vim="nvim" \
 		vimm="vim"\
+		bwin="bw login $(echo $BW_EMAIL $BW_MASTER)"\
 		suv="sudo nvim" \
 		gk="getkeys" \
 		z="zathura" \
