--- a/private_dot_config/shell/aliasrc.tmpl
+++ b/private_dot_config/shell/aliasrc.tmpl
@@ -131,8 +131,12 @@ alias \
 		cv="chezmoi edit" \
 		chezap="chezmoi -v apply" \
 		chezcd="chezmoi cd" \
+		chezat="chezmoi --autotemplate" \
+		chezt="chezmoi --template" \
+		chezxt="chezmoi execute-template" \
 		dtch="chezmoi cd" \
 		chezad="chezmoi add" \
+		chezdf="chezmoi diff" \
 		chezup="chezmoi -v update"
 #GIT
 alias \
