--- a/private_dot_config/shell/aliasrc.tmpl
+++ b/private_dot_config/shell/aliasrc.tmpl
@@ -58,9 +58,9 @@ alias \
 		v="nvim" \
 		vim="nvim" \
 		vimm="vim"\
-		bwin="bw login $(echo $BW_EMAIL $BW_MASTER)"\
-		bwin="bw logout"\
-		bwgp="bw get"\
+		bwin='bw login $(echo $BW_EMAIL $BW_MASTER)'\
+		bwout="bw logout"\
+		bwg="bw get"\
 		bwgp="bw get password"\
 		suv="sudo nvim" \
 		suct="sudo VISUAL=nvim crontab" \
