Update ssh name

--- a/private_dot_ssh/id_rsa.pub.tmpl
+++ b/private_dot_ssh/id_rsa.pub.tmpl
@@ -1,7 +1,7 @@
 {{- if .secret -}}
 {{-   if (eq .chezmoi.os "linux") }}
-{{-     (bitwarden "item" "sshpub").notes -}}
+{{-     (bitwarden "item" "archlaptop-sshpub").notes -}}
 {{-   else if (eq .chezmoi.os "darwin") }}
-{{-     (bitwarden "item" "sshpubmac").notes -}}
+{{-     (bitwarden "item" "macbook-sshpub").notes -}}
 {{-   end -}}
 {{- end -}}
