--- a/private_dot_ssh/id_rsa.pub.tmpl
+++ b/private_dot_ssh/id_rsa.pub.tmpl
@@ -1,7 +1,15 @@
 {{- if .secret -}}
-{{-   if (eq .chezmoi.os "linux") }}
-{{-     (bitwarden "item" "archlaptop-sshpub").notes -}}
-{{-   else if (eq .chezmoi.os "darwin") }}
-{{-     (bitwarden "item" "macbook-sshpub").notes -}}
+{{-   if .bw -}}
+{{-     if (eq .chezmoi.os "linux") }}
+{{-       (bitwarden "item" "archlaptop-sshpub").notes -}}
+{{-     else if (eq .chezmoi.os "darwin") }}
+{{-       (bitwarden "item" "macbook-sshpub").notes -}}
+{{-     end -}}
+{{-   else -}}
+{{-     if (eq .chezmoi.os "linux") }}
+{{-       pass "ssh/archlaptop-sshpub" -}}
+{{-     else if (eq .chezmoi.os "darwin") }}
+{{-       pass "ssh/macbook-sshpub" -}}
+{{-     end -}}
 {{-   end -}}
 {{- end -}}
