--- a/private_dot_ssh/private_id_rsa.tmpl
+++ b/private_dot_ssh/private_id_rsa.tmpl
@@ -1,7 +1,15 @@
 {{- if .secret -}}
-{{-   if (eq .chezmoi.os "linux") }}
-{{-     (bitwarden "item" "archlaptop-sshpriv").notes -}}
-{{-   else if (eq .chezmoi.os "darwin") }}
-{{-     (bitwarden "item" "macbook-sshpriv").notes -}}
+{{-   if .bw -}}
+{{-     if (eq .chezmoi.os "linux") }}
+{{-       (bitwarden "item" "archlaptop-sshpriv").notes -}}
+{{-     else if (eq .chezmoi.os "darwin") }}
+{{-       (bitwarden "item" "macbook-sshpriv").notes -}}
+{{-     end -}}
+{{-   else -}}
+{{-     if (eq .chezmoi.os "linux") }}
+{{-       passRaw "ssh/archlaptop-sshpriv" -}}
+{{-     else if (eq .chezmoi.os "darwin") }}
+{{-       passRaw "ssh/macbook-sshpriv" -}}
+{{-     end -}}
 {{-   end -}}
 {{- end -}}
