--- a/private_dot_config/git/config.tmpl
+++ b/private_dot_config/git/config.tmpl
@@ -38,6 +38,16 @@
 #	wordRegex = "[^[:space:]]|([[:alnum:]]|UTF_8_GUARD)+"
 #	compactionHeuristic = true
 	tool = nvimdiff
+[difftool]
+    ; prompt = true
+
+[difftool "nvimdiff"]
+    cmd = "nvim -d \"$LOCAL\" \"$REMOTE\""
+#[merge]
+#	tool = nvimdiff
+#[mergetool]
+
+#[mergetool " "]
 
 [color]
 	ui = true
