Added Chemacs and emacs scratch

--- a/private_dot_config/shell/aliasrc.tmpl
+++ b/private_dot_config/shell/aliasrc.tmpl
@@ -69,6 +69,7 @@ alias \
 		gk="getkeys" \
 		z="zathura" \
 		sx="sxiv" \
+		emacsd="emacs --with-profile doom" \
 		eb="epy" \
 		fv='nvim "$(fzf)"' \
 		feb='epy "$(fzf)"'\
