--- a/private_dot_config/shell/profile.tmpl
+++ b/private_dot_config/shell/profile.tmpl
@@ -10,7 +10,7 @@ export PATH="$PATH:$(du "$HOME/.local/bin" | cut -f2 | paste -sd ':')"
 export PATH="$HOME/.local/bin${PATH:+:${PATH}}"
 unsetopt PROMPT_SP
 
-export PATH=$PATH:~/.config/emacs/bin
+export PATH=$PATH:~/.config/emacs-doom/bin
 export NPM_CONFIG_PREFIX=~/.local/
 
 # Default programs:
