--- a/private_dot_config/shell/aliasrc.tmpl
+++ b/private_dot_config/shell/aliasrc.tmpl
@@ -59,6 +59,8 @@ alias \
 		z="zathura" \
 		sx="sxiv" \
 		emacsd="emacs --with-profile doom" \
+		emacst="emacs -nw" \
+		emacsv="emacs --with-profile vanilla" \
 		eb="epy" \
 		fv='nvim "$(fzf)"' \
 		feb='epy "$(fzf)"'\
@@ -155,8 +157,6 @@ alias \
 		grm="git remote" \
 		gin="git init" \
 		ginB="git init --bare"
-alias \
-		emacsd="emacs --with-profile doom" \
 #GIT BARE
 #alias \
 #		rdf="/usr/bin/git --git-dir=$HOME/repos/mario/bare/dotfiles/ --work-tree=$HOME" \
