--- a/private_dot_config/git/config.tmpl
+++ b/private_dot_config/git/config.tmpl
@@ -39,7 +39,7 @@
 #	compactionHeuristic = true
 	tool = nvimdiff
 [difftool]
-    ; prompt = true
+#    prompt = true
 
 [difftool "nvimdiff"]
     cmd = "nvim -d \"$LOCAL\" \"$REMOTE\""
