--- a/private_dot_config/newsboat/executable_config.tmpl
+++ b/private_dot_config/newsboat/executable_config.tmpl
@@ -31,14 +31,19 @@ color article           white   default bold
 browser linkhandler
 macro a set browser "youtube-dl --add-metadata -xic -f bestaudio/best" ; open-in-browser ; set browser linkhandler
 macro b open-in-browser
+{{- if eq .chezmoi.os "darwin" }}
+macro c set browser "pbcopy <<<" ; open-in-browser ; set browser linkhandler
+macro w set browser "mpv --really-quiet" ; open-in-browser ; set browser linkhandler
+{{ else }}
+macro w set browser "setsid -f mpv --really-quiet" ; open-in-browser ; set browser linkhandler
 macro c set browser "xsel -b <<<" ; open-in-browser ; set browser linkhandler
 macro C set browser "youtube-viewer --comments=%u" ; open-in-browser ; set browser linkhandler
 macro d set browser "dmenuhandler" ; open-in-browser ; set browser linkhandler
-macro w set browser "setsid -f mpv --really-quiet" ; open-in-browser ; set browser linkhandler
-macro v set browser "youtube-dl --add-metadata -i" ; open-in-browser ; set browser linkhandler
-macro l set browser "lynx" ; open-in-browser ; set browser linkhandler
 macro p set browser "peertubetorrent %u 480" ; open-in-browser ; set browser linkhandler
 macro P set browser "peertubetorrent %u 1080" ; open-in-browser ; set browser linkhandler
+{{ end }}
+macro v set browser "youtube-dl --add-metadata -i" ; open-in-browser ; set browser linkhandler
+macro l set browser "lynx" ; open-in-browser ; set browser linkhandler
 
 highlight all "---.*---" yellow
 highlight feedlist ".*(0/0))" black
